Site: Updated links for 1.1.1 release
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

--- a/site/output/addresses.html
+++ b/site/output/addresses.html
@@ -110,35 +110,43 @@ The addresses collection represents IP addresses and allows <strong>IP address m
 This collection is currently implemented for Amazon EC2 and Fujitsu GCP drivers. For EC2, IP address management corresponds to Amazon's 'Elastic IP' feature.
 </p>
 
-<br><p>
+<br>
+
+<p>
 The addresses collection supports these operations:
 </p>
 
 <ul>
-<li>creating an address</li>
+  <li>creating an address</li>
   <li>destroying an address</li>
   <li>association an address with a running instance</li>
   <li>dissociating an address from a running instance</li>
 </ul>
-<br><br><ul class="nav nav-pills">
-<li class="active"><a href="#tab1" data-toggle="tab">Get a list of all addresses</a></li>
+
+<br>
+<br>
+
+<ul class="nav nav-pills">
+  <li class="active"><a href="#tab1" data-toggle="tab">Get a list of all addresses</a></li>
   <li><a href="#tab2" data-toggle="tab">Get the details of an address</a></li>
   <li><a href="#tab3" data-toggle="tab">Create/delete an address</a></li>
   <li><a href="#tab4" data-toggle="tab">Associate/disassociate an address</a></li>
 </ul>
+
 <hr>
-</div>
+
+  </div>
   <div class="span3">
 
 <ul class="nav nav-list well">
-<li class="nav-header">
+  <li class="nav-header">
     REST API
   </li>
   <li><a href="rest-api.html">Introduction</a></li>
   <li><a href="api-entry-point.html">API entry point</a></li>
   <li><a href="compute-resources.html">Compute resources</a></li>
   <ul class="nav nav-list">
-<li><a href="compute-resources.html">Realms</a></li>
+    <li><a href="compute-resources.html">Realms</a></li>
     <li><a href="hardware-profiles.html">Hardware profiles</a></li>
     <li><a href="images.html">Images</a></li>
     <li><a href="instance-states.html">Instance states</a></li>
@@ -148,9 +156,10 @@ The addresses collection supports these operations:
     <li class="active"><a href="#addresses">Addresses</a></li>
     <li><a href="load-balancers.html">Load balancers</a></li>
   </ul>
-<li><a href="storage-resources.html">Storage resources</a></li>
+  <li><a href="storage-resources.html">Storage resources</a></li>
 </ul>
-</div>
+
+  </div>
 </div>
 
 <div class="tab-content">
@@ -363,6 +372,7 @@ Content-Length: 0
 <p><a class="btn btn-inverse btn-large" style="float: right" href="load-balancers.html">Load Balancers  <i class="icon-arrow-right icon-white" style="vertical-align:baseline"> </i></a></p>
 
 <p><br></p>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
