--- a/site/output/cimi-rest/cimi-rest-machine-configs.html
+++ b/site/output/cimi-rest/cimi-rest-machine-configs.html
@@ -116,7 +116,7 @@ resources within a Provider
   <div class="span3">
 
 <ul class="nav nav-list well">
-<li class="nav-header">
+  <li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -127,30 +127,36 @@ resources within a Provider
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-</li>
+  </li>
   <hr>
-<li class="nav-header">
+  <li class="nav-header">
     Machine Resources
   </li>
   <ul class="nav nav-list">
-<li><a href="cimi-rest-collections.html">Machine</a></li>
+    <li><a href="cimi-rest-collections.html">Machine</a></li>
     <li><a href="cimi-rest-machine-images.html">MachineImage</a></li>
     <li class="active"><a href="cimi-rest-machine-configs.html">MachineConfiguration</a></li>
     <li><a href="cimi-rest-machine-templates.html">MachineTemplate</a></li>
   </ul>
+
 </ul>
-</div>
+
+  </div>
 
 </div>
 
 <ul class="nav nav-pills">
-<li class="active"><a href="#config-collection" data-toggle="tab">Retrieve the Machine Configuration Collection</a></li>
+  <li class="active"><a href="#config-collection" data-toggle="tab">Retrieve the Machine Configuration Collection</a></li>
   <li><a href="#single-config" data-toggle="tab">Retrieve a single Machine Configuration</a></li>
-</ul><hr><div class="tab-content">
+</ul>
+
+<hr>
+
+<div class="tab-content">
   <div class="tab-pane active" id="config-collection">
 
 <h4>Retrieve the Machine Configuration Collection</h4>
@@ -264,6 +270,7 @@ Server: thin 1.5.0 codename Knife
 </pre>
   </div>
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
