--- a/site/output/cimi-rest/cimi-rest-machine-templates.html
+++ b/site/output/cimi-rest/cimi-rest-machine-templates.html
@@ -126,7 +126,7 @@ A CIMI client (a <strong>consumer</strong> in CIMI terminology) uses a Machine T
   <div class="span3">
 
 <ul class="nav nav-list well">
-<li class="nav-header">
+  <li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -137,32 +137,38 @@ A CIMI client (a <strong>consumer</strong> in CIMI terminology) uses a Machine T
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-</li>
+  </li>
   <hr>
-<li class="nav-header">
+  <li class="nav-header">
     Machine Resources
   </li>
   <ul class="nav nav-list">
-<li><a href="cimi-rest-collections.html">Machine</a></li>
+    <li><a href="cimi-rest-collections.html">Machine</a></li>
     <li><a href="cimi-rest-machine-images.html">MachineImage</a></li>
     <li><a href="cimi-rest-machine-configs.html">MachineConfiguration</a></li>
     <li class="active"><a href="cimi-rest-machine-templates.html">MachineTemplate</a></li>
   </ul>
+
 </ul>
-</div>
+
+  </div>
 
 </div>
 
 <ul class="nav nav-pills">
-<li class="active"><a href="#template-collection" data-toggle="tab">Retrieve the Machine Template Collection</a></li>
+  <li class="active"><a href="#template-collection" data-toggle="tab">Retrieve the Machine Template Collection</a></li>
   <li><a href="#single-template" data-toggle="tab">Retrieve a single Machine Template</a></li>
   <li><a href="#create-template" data-toggle="tab">Create a new Machine Template</a></li>
   <li><a href="#delete-template" data-toggle="tab">Delete a Machine Template</a></li>
-</ul><hr><div class="tab-content">
+</ul>
+
+<hr>
+
+<div class="tab-content">
   <div class="tab-pane active" id="template-collection">
 
 <h4>Retrieve the Machine Template Collection</h4>
@@ -328,6 +334,7 @@ Server: thin 1.5.0 codename Knife
 </pre>
   </div>
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
