--- a/site/output/cimi-rest/cimi-rest-volume-templates.html
+++ b/site/output/cimi-rest/cimi-rest-volume-templates.html
@@ -105,7 +105,8 @@
 <strong><em>
 This resource captures the configuration values for realizing a Volume. A Volume Template may be used
 to create multiple Volumes.
-<br><br>
+<br>
+<br>
 A Volume Template Collection resource represents the collection of VolumeTemplate resources within a
 Provider.
 </em></strong>
@@ -117,7 +118,7 @@ Provider.
 
 
 <ul class="nav nav-list well">
-<li class="nav-header">
+  <li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -128,33 +129,39 @@ Provider.
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-</li>
+  </li>
   <hr>
-<li class="nav-header">
+  <li class="nav-header">
     Volume Resources
   </li>
   <ul class="nav nav-list">
-<li><a href="cimi-rest-volumes.html">Volume</a></li>
+    <li><a href="cimi-rest-volumes.html">Volume</a></li>
     <li><a href="cimi-rest-volume-images.html">VolumeImage</a></li>
     <li><a href="cimi-rest-volume-configs.html">VolumeConfiguration</a></li>
     <li class="active"><a href="cimi-rest-volume-templates.html">VolumeTemplate</a></li>
   </ul>
+
 </ul>
-</div>
+
+  </div>
 
 </div>
 
 <ul class="nav nav-pills">
-<li class="active"><a href="#volume-template-collection" data-toggle="tab">Retrieve the Volume Template Collection</a></li>
+  <li class="active"><a href="#volume-template-collection" data-toggle="tab">Retrieve the Volume Template Collection</a></li>
   <li><a href="#single-volume-template" data-toggle="tab">Retrieve a single Volume Template</a></li>
   <li><a href="#create-volume-template" data-toggle="tab">Create a Volume Template</a></li>
   <li><a href="#delete-volume-template" data-toggle="tab">Delete a Volume Template</a></li>
 
-</ul><hr><div class="tab-content">
+</ul>
+
+<hr>
+
+<div class="tab-content">
 
   <div class="tab-pane active" id="volume-template-collection">
 
@@ -327,6 +334,7 @@ Server: thin 1.5.0 codename Knife
 
   </div>
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
