--- a/site/output/download.html
+++ b/site/output/download.html
@@ -98,7 +98,7 @@
       <p><br></p>
 <h3>Download</h3>
 <p>
-  Version <b>1.1.0</b> of Apache Deltacloud is available. See the
+  Version <b>1.1.1</b> of Apache Deltacloud is available. See the
   <a href="https://git-wip-us.apache.org/repos/asf?p=deltacloud.git;a=blob;f=NEWS">release notes</a>.
 </p>
 <p>
@@ -109,52 +109,55 @@
   signatures from our <a href="http://www.apache.org/dist/deltacloud/">main distribution directory</a>.
 </p>
 <h3 id="mirrors">Current release</h3>
-<table class="table"><tbody>
-<tr>
-<td><strong>server-gem</strong></td>
+<table class="table">
+  <tbody>
+    <tr>
+      <td><strong>server-gem</strong></td>
       <td>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.gem">deltacloud-core-1.1.0.gem</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.gem">deltacloud-core-1.1.1.gem</a>
         (
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.gem.asc">PGP</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.gem.md5">MD5</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.gem.sha1">SHA1</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.gem.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.gem.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.gem.sha1">SHA1</a>
         )
       </td>
     </tr>
-<tr>
-<td><strong>server-sources</strong></td>
+    <tr>
+      <td><strong>server-sources</strong></td>
       <td>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.tgz">deltacloud-core-1.1.0.tgz</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.tgz">deltacloud-core-1.1.1.tgz</a>
         (
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.tgz.asc">PGP</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.tgz.md5">MD5</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.0.tgz.sha1">SHA1</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.tgz.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.tgz.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.tgz.sha1">SHA1</a>
         )
       </td>
     </tr>
-<tr>
-<td><strong>client-gem</strong></td>
+    <tr>
+      <td><strong>client-gem</strong></td>
       <td>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.gem">deltacloud-client-1.1.0.gem</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.gem">deltacloud-client-1.1.1.gem</a>
         (
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.gem.asc">PGP</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.gem.md5">MD5</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.gem.sha1">SHA1</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.gem.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.gem.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.gem.sha1">SHA1</a>
         )
       </td>
     </tr>
-<tr>
-<td><strong>client-sources</strong></td>
+    <tr>
+      <td><strong>client-sources</strong></td>
       <td>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.tgz">deltacloud-client-1.1.0.tgz</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.tgz">deltacloud-client-1.1.1.tgz</a>
         (
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.tgz.asc">PGP</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.tgz.md5">MD5</a>
-        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.0.tgz.sha1">SHA1</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.tgz.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.tgz.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.tgz.sha1">SHA1</a>
         )
       </td>
     </tr>
-</tbody></table><p></p>
+  </tbody>
+</table>
+<p></p>
 <h4 id="archive">Old releases</h4>
 <p>
   Older releases of Apache Deltacloud can be found <a href="http://archive.apache.org/dist/deltacloud/">here</a>. We highly recommend to <b>not use</b>
@@ -191,18 +194,19 @@
 </p>
 <pre>
 $ pgpk -a KEYS
-$ pgpv deltacloud-core-1.1.0.tar.gz.asc
+$ pgpv deltacloud-core-1.1.1.tar.gz.asc
 </pre>
 <p>or</p>
 <pre>
 $ pgp -ka KEYS
-$ pgp deltacloud-core-1.1.0.tar.gz.asc
+$ pgp deltacloud-core-1.1.1.tar.gz.asc
 </pre>
 <p>or</p>
 <pre>
 $ gpg --import KEYS
-$ gpg --verify deltacloud-core-1.1.0.tar.gz.asc
+$ gpg --verify deltacloud-core-1.1.1.tar.gz.asc
 </pre>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
