--- a/site/output/usage.html
+++ b/site/output/usage.html
@@ -153,7 +153,10 @@ openstack = client.with_config(:driver =&gt; :openstack)
 
 <a class="btn btn-inverse btn-large" style="float: right" href="ruby-client.html">Work with the Ruby client</a>
 
-<br><br><h3>HTTP clients - cURL</h3>
+<br>
+<br>
+
+<h3>HTTP clients - cURL</h3>
 
 <p>
 Basically, you interact with the Deltacloud server via HTTP calls, so you can use any HTTP client to talk to Deltacloud using the <a href="rest-api.html">Deltacloud REST API</a>.
@@ -222,7 +225,10 @@ The <strong>'-iv'</strong> flags will ensure that cURL displays the request and 
 
 <a class="btn btn-inverse btn-large" style="float: right" href="curl-examples.html">Working with cURL</a>
 
-<br><br><h3>Libdeltacloud Client (C library)</h3>
+<br>
+<br>
+
+<h3>Libdeltacloud Client (C library)</h3>
 <p>
 Libdeltacloud is a C/C++ library for accessing the Deltacloud API. It exports convenient structures and functions for manipulating cloud objects through the Deltacloud API.
 </p>
@@ -243,6 +249,8 @@ Due to the magic of libtool versioning, programs built against an older version 
 <a class="btn btn-inverse btn-large" style="float: right" href="http://deltacloud.apache.org/libdeltacloud/index.html">Libdeltacloud documentation</a>
 
 <br>
+
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
