--- a/site/output/cimi-rest/cimi-rest-volume-configs.html
+++ b/site/output/cimi-rest/cimi-rest-volume-configs.html
@@ -106,7 +106,8 @@
 The Volume Configuration resource represents the set of configuration values needed to create a Volume
 with certain characteristics. Volume Configurations are created by Providers and may, at the Providers
 discretion, be created by Consumers.
-<br><br>
+<br>
+<br>
 A Volume Configuration Collection resource represents the collection of Volume Configuration resources
 within a Provider.
 </em></strong>
@@ -117,7 +118,7 @@ within a Provider.
 
 
 <ul class="nav nav-list well">
-<li class="nav-header">
+  <li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -128,32 +129,38 @@ within a Provider.
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-<li><a href="cimi-rest-resource-metadata.html">Resource Metadata</a></li>
+      <li><a href="cimi-rest-resource-metadata.html">Resource Metadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-</li>
+  </li>
   <hr>
-<li class="nav-header">
+  <li class="nav-header">
     Volume Resources
   </li>
   <ul class="nav nav-list">
-<li><a href="cimi-rest-volumes.html">Volume</a></li>
+    <li><a href="cimi-rest-volumes.html">Volume</a></li>
     <li><a href="cimi-rest-volume-images.html">VolumeImage</a></li>
     <li class="active"><a href="cimi-rest-volume-configs.html">VolumeConfiguration</a></li>
     <li><a href="cimi-rest-volume-templates.html">VolumeTemplate</a></li>
   </ul>
+
 </ul>
-</div>
+
+  </div>
 
 </div>
 
 <ul class="nav nav-pills">
-<li class="active"><a href="#volume-config-collection" data-toggle="tab">Retrieve the Volume Configuration Collection</a></li>
+  <li class="active"><a href="#volume-config-collection" data-toggle="tab">Retrieve the Volume Configuration Collection</a></li>
   <li><a href="#single-volume-config" data-toggle="tab">Retrieve a single Volume Configuration</a></li>
   <li><a href="#create-volume-config" data-toggle="tab">Create a Volume Configuration</a></li>
   <li><a href="#delete-volume-config" data-toggle="tab">Delete a Volume Configuration</a></li>
-</ul><hr><div class="tab-content">
+</ul>
+
+<hr>
+
+<div class="tab-content">
 
   <div class="tab-pane active" id="volume-config-collection">
 
@@ -330,6 +337,7 @@ Server: thin 1.5.0 codename Knife
   </div>
 
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
