--- a/site/output/cimi-rest/cimi-rest-volume-images.html
+++ b/site/output/cimi-rest/cimi-rest-volume-images.html
@@ -104,7 +104,8 @@
 <p>
 <strong><em>
 This resource represents an image that could be placed on a pre-loaded volume.
-<br><br>
+<br>
+<br>
 A Volume Image Collection resource represents the collection of Volume Image resources within a
 Provider.
 </em></strong>
@@ -115,7 +116,7 @@ Provider.
 
 
 <ul class="nav nav-list well">
-<li class="nav-header">
+  <li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -126,32 +127,38 @@ Provider.
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-</li>
+  </li>
   <hr>
-<li class="nav-header">
+  <li class="nav-header">
     Volume Resources
   </li>
   <ul class="nav nav-list">
-<li><a href="cimi-rest-volumes.html">Volume</a></li>
+    <li><a href="cimi-rest-volumes.html">Volume</a></li>
     <li class="active"><a href="cimi-rest-volume-images.html">VolumeImage</a></li>
     <li><a href="cimi-rest-volume-configs.html">VolumeConfiguration</a></li>
     <li><a href="cimi-rest-volume-templates.html">VolumeTemplate</a></li>
   </ul>
+
 </ul>
-</div>
+
+  </div>
 
 </div>
 
 <ul class="nav nav-pills">
-<li class="active"><a href="#volume-image-collection" data-toggle="tab">Retrieve the Volume Image Collection</a></li>
+  <li class="active"><a href="#volume-image-collection" data-toggle="tab">Retrieve the Volume Image Collection</a></li>
   <li><a href="#single-volume-image" data-toggle="tab">Retrieve a single Volume Image</a></li>
   <li><a href="#create-volume-image" data-toggle="tab">Create a Volume Image</a></li>
   <li><a href="#delete-volume-image" data-toggle="tab">Delete a Volume Image</a></li>
-</ul><hr><div class="tab-content">
+</ul>
+
+<hr>
+
+<div class="tab-content">
 
   <div class="tab-pane active" id="volume-image-collection">
 
@@ -339,6 +346,7 @@ Server: thin 1.5.0 codename Knife
   </div>
 
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
