--- a/site/output/supported-providers.html
+++ b/site/output/supported-providers.html
@@ -100,8 +100,9 @@
 
 <h4>Compute Driver Functionality</h4>
 <table class="table-bordered table-striped table-condensed">
-<thead><tr>
-<th class="emptycell"> </th>
+  <thead>
+    <tr>
+      <th class="emptycell"> </th>
       <th>
         Create new instances
       </th>
@@ -129,10 +130,11 @@
       <th>
         List all/get details about instances
       </th>
-    </tr></thead>
-<tbody>
-<tr>
-<td class="provider">
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="provider">
         <strong>Amazon EC2</strong>
       </td>
       <td>yes</td>
@@ -146,8 +148,8 @@
       <td>yes</td>
       
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Eucalyptus</strong>
       </td>
       <td>yes</td>
@@ -160,8 +162,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>IBM SmartCloud</strong>
       </td>
       <td>yes</td>
@@ -174,8 +176,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>GoGrid</strong>
       </td>
       <td>yes</td>
@@ -188,8 +190,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>OpenNebula</strong>
       </td>
       <td>yes</td>
@@ -202,8 +204,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Rackspace</strong>
       </td>
       <td>yes</td>
@@ -216,8 +218,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>RHEV-M</strong>
       </td>
       <td>yes</td>
@@ -230,8 +232,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>RimuHosting</strong>
       </td>
       <td>yes</td>
@@ -244,8 +246,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Terremark</strong>
       </td>
       <td>yes</td>
@@ -258,8 +260,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>vSphere</strong>
       </td>
       <td>yes</td>
@@ -272,8 +274,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>OpenStack</strong>
       </td>
       <td>yes</td>
@@ -286,8 +288,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>FGCP</strong>
       </td>
       <td>yes</td>
@@ -300,8 +302,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Arubacloud</strong>
       </td>
       <td>yes</td>
@@ -314,12 +316,14 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-</tbody>
-</table><p><br></p>
+  </tbody>
+</table>
+<p><br></p>
 <h4>Storage Driver Functionality</h4>
 <table class="table-bordered table-striped table-condensed">
-<thead><tr>
-<th class="emptycell"> </th>
+  <thead>
+    <tr>
+      <th class="emptycell"> </th>
       <th>
         Create new buckets
       </th>
@@ -338,10 +342,11 @@
       <th>
         Read/write individual blob attributes
       </th>
-    </tr></thead>
-<tbody>
-<tr>
-<td class="provider">
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="provider">
         <strong>Amazon S3</strong>
       </td>
       <td>yes</td>
@@ -351,8 +356,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Eucalyptus Walrus</strong>
       </td>
       <td>yes</td>
@@ -362,8 +367,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Rackspace CloudFiles</strong>
       </td>
       <td>yes</td>
@@ -373,8 +378,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Microsoft Azure</strong>
       </td>
       <td>yes</td>
@@ -384,8 +389,8 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Google Storage</strong>
       </td>
       <td>yes</td>
@@ -395,21 +400,25 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
-</tbody>
-</table><p><br></p>
+  </tbody>
+</table>
+
+<p><br></p>
 
 <h4 id="credentials">Cloud provider credentials</h4>
 <table class="table-bordered table-striped table-condensed">
-<thead><tr>
-<th>Cloud</th>
+  <thead>
+    <tr>
+      <th>Cloud</th>
       <th>Driver</th>
       <th>Username</th>
       <th>Password</th>
       <th>Notes</th>
-    </tr></thead>
-<tbody>
-<tr>
-<td style="text-align:left">
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align:left">
         <strong>mock</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">mock</span></td>
@@ -417,8 +426,8 @@
       <td style="text-align:left"><span style="font-size:x-small">mockpassword</span></td>
       <td style="text-align:left">The mock driver doesn't talk to any cloud; it just pretends to be a cloud.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Amazon EC2/S3</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">ec2</span></td>
@@ -426,8 +435,8 @@
       <td style="text-align:left">Secret Access Key</td>
       <td style="text-align:left">This information can be found on the <a href="http://aws-portal.amazon.com/gp/aws/developer/account/index.html?action=access-key">Security Credentials</a> page in your AWS account.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Eucalyptus</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">eucalyptus</span></td>
@@ -435,8 +444,8 @@
       <td style="text-align:left">Secret Access Key</td>
       <td style="text-align:left"></td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>GoGrid</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">gogrid</span></td>
@@ -444,8 +453,8 @@
       <td style="text-align:left">Shared Secret</td>
       <td style="text-align:left">Go to <span style="font-size:x-small">My Account &gt; API Keys</span> for <a href="https://my.gogrid.com/gogrid/com.servepath.gogrid.GoGrid/index.html">your account</a> and click on the key you want to use to find the shared secret.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>IBM SmartCloud</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">sbc</span></td>
@@ -453,8 +462,8 @@
       <td style="text-align:left">Password</td>
       <td style="text-align:left"></td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Microsoft Azure (Storage Account only)</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">azure</span></td>
@@ -462,8 +471,8 @@
       <td style="text-align:left">Primary Access Key</td>
       <td style="text-align:left">The Storage Account Name is chosen when you create the service (e.g. name in http://name.blob.core.windows.net/). This and the access key are available from the service control panel.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>OpenNebula</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">opennebula</span></td>
@@ -471,8 +480,8 @@
       <td style="text-align:left">OpenNebula password</td>
       <td style="text-align:left">Set the environment variable OCCI_URL to the address on which OpenNebula's OCCI server is listening.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Rackspace Cloud Servers/Cloud Files</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">rackspace</span></td>
@@ -480,8 +489,8 @@
       <td style="text-align:left">API Key</td>
       <td style="text-align:left">Obtain the key from the <a href="https://manage.rackspacecloud.com/APIAccess.do">API Access</a> page in your control panel.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>RHEV-M</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">rhevm</span></td>
@@ -491,8 +500,8 @@
       <td style="text-align:left">RHEV-M password</td>
       <td style="text-align:left">Set environment variable API_PROVIDER to the URL of the RHEV-M REST API endpoint. </td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Rimuhosting</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">rimuhosting</span></td>
@@ -500,8 +509,8 @@
       <td style="text-align:left">API Key</td>
       <td style="text-align:left"></td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Terremark</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">terremark</span></td>
@@ -509,8 +518,8 @@
       <td style="text-align:left">Password</td>
       <td style="text-align:left"></td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>VMware vSphere</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">vsphere</span></td>
@@ -518,8 +527,8 @@
       <td style="text-align:left">vSphere user password</td>
       <td style="text-align:left">Set environment variable API_PROVIDER to the hostname of the vSphere server.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>OpenStack</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">openstack</span></td>
@@ -527,8 +536,8 @@
       <td style="text-align:left">OpenStack user password</td>
       <td style="text-align:left">Set environment variable API_PROVIDER to the URL of OpenStack API entrypoint.</td>
     </tr>
-<tr>
-<td style="text-align:left">
+    <tr>
+      <td style="text-align:left">
         <strong>Arubacloud</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">arubacloud</span></td>
@@ -536,8 +545,9 @@
       <td style="text-align:left">Password</td>
       <td style="text-align:left"></td>
     </tr>
-</tbody>
+  </tbody>
 </table>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
